--- a/supportcompactlibrary/build.gradle
+++ b/supportcompactlibrary/build.gradle
@@ -37,7 +37,7 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "androidx.appcompat:appcompat:1.1.0"
+    implementation "androidx.appcompat:appcompat:$APPCOMPAT"
     implementation "androidx.constraintlayout:constraintlayout:1.1.3"
     implementation "androidx.lifecycle:lifecycle-common-java8:2.2.0"
     // ViewModel and LiveData
