--- a/build.gradle
+++ b/build.gradle
@@ -35,8 +35,8 @@ project.ext {
     TARGET_SDK_VERSION = 28
     MIN_SDK_VERSION = 21
 
-    VERSION_CODE = 17
-    VERSION_NAME = "1.9.7"
+    VERSION_CODE = 18
+    VERSION_NAME = "1.9.8"
 
     VERSION_CODE_RURAL = 1
     VERSION_NAME_RURAL = "1.0"
@@ -49,6 +49,7 @@ project.ext {
     RETROFIT_VERSION = "2.3.0"
     GOOGLE_VERSION = "11.0.4"
     GLIDE_VERSION = "3.7.0"
+    APPCOMPAT = "1.3.0-alpha01"
 
     MINIFY_ENABLE = false
     SHRINK_RESOURCES = false
