--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ android {
     }
     buildTypes {
         release {
-            debuggable true
+            debuggable false
             minifyEnabled MINIFY_ENABLE
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
@@ -144,8 +144,8 @@ dependencies {
     //implementation 'com.github.smart-fun:XmlToJson:1.4.4'
     //implementation 'com.android.support:support-v4:28.0.0'
     /**Firebase Dependency*/
-    implementation 'com.google.firebase:firebase-core:17.2.1'
-    implementation 'com.google.firebase:firebase-messaging:20.1.0'
+    implementation 'com.google.firebase:firebase-core:17.4.3'
+    implementation 'com.google.firebase:firebase-messaging:20.2.0'
     implementation 'com.facebook.android:facebook-login:4.41.0'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
@@ -162,17 +162,17 @@ dependencies {
     implementation 'io.branch.sdk.android:library:4.2.1'
 
     // required if your app is in the Google Play Store (tip: avoid using bundled play services libs)
-    implementation 'com.google.firebase:firebase-appindexing:19.0.0' // App indexing
-    implementation 'com.google.android.gms:play-services-ads:18.3.0'
+    implementation 'com.google.firebase:firebase-appindexing:19.1.0' // App indexing
+    implementation 'com.google.android.gms:play-services-ads:19.1.0'
 
 //    Sentry Traking
     implementation 'io.sentry:sentry-android:1.7.27'
     implementation 'org.slf4j:slf4j-nop:1.7.25'
 
     //kotlinx-corountines-core, kotlinx-coroutines-android
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1'
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.0-alpha01"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0'
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.0-alpha03"
 
     // Speedometer
     implementation 'com.github.anastr:speedviewlib:1.5.2'
