--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ buildscript {
         maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:3.6.3"
+        classpath 'com.android.tools.build:gradle:4.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.2.0' // google-services plugin
         // Add dependency
@@ -35,8 +35,8 @@ project.ext {
     TARGET_SDK_VERSION = 28
     MIN_SDK_VERSION = 21
 
-    VERSION_CODE = 18
-    VERSION_NAME = "1.9.8"
+    VERSION_CODE = 19
+    VERSION_NAME = "1.9.9"
 
     VERSION_CODE_RURAL = 1
     VERSION_NAME_RURAL = "1.0"
