--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'kotlin-android-extensions'
 
 apply plugin: 'kotlin-kapt'
 
-apply plugin: 'io.fabric'
+apply plugin: 'com.google.firebase.crashlytics'
 
 android {
 
@@ -110,8 +110,8 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "androidx.appcompat:appcompat:$APPCOMPAT"
     implementation "androidx.cardview:cardview:1.0.0"
-    implementation "androidx.constraintlayout:constraintlayout:1.1.3"
-    implementation "com.google.android.material:material:1.1.0"
+    implementation "androidx.constraintlayout:constraintlayout:2.0.2"
+    implementation "com.google.android.material:material:1.2.1"
     implementation 'ru.bullyboo.animation:text_counter:1.0.2'
     // ViewModel and LiveData
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
@@ -131,7 +131,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.otaliastudios:zoomlayout:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
     implementation 'org.jsoup:jsoup:1.11.3'
     implementation 'com.williamww:silky-signature:0.1.0'
@@ -144,10 +143,14 @@ dependencies {
     //implementation 'com.github.smart-fun:XmlToJson:1.4.4'
     //implementation 'com.android.support:support-v4:28.0.0'
     /**Firebase Dependency*/
-    implementation 'com.google.firebase:firebase-core:17.4.3'
-    implementation 'com.google.firebase:firebase-messaging:20.2.1'
-    implementation 'com.facebook.android:facebook-login:4.41.0'
-    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
+    implementation 'com.google.firebase:firebase-core:17.5.1'
+    implementation 'com.google.firebase:firebase-messaging:20.3.0'
+    implementation 'com.facebook.android:facebook-login:5.5.1'
+    //implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
+    // Add the Firebase Crashlytics SDK.
+    implementation 'com.google.firebase:firebase-crashlytics:17.2.2'
+    // Recommended: Add the Google Analytics SDK.
+    implementation 'com.google.firebase:firebase-analytics:17.6.0'
 
 
     testImplementation 'junit:junit:4.12'
@@ -166,7 +169,7 @@ dependencies {
 
     // required if your app is in the Google Play Store (tip: avoid using bundled play services libs)
     implementation 'com.google.firebase:firebase-appindexing:19.1.0' // App indexing
-    implementation 'com.google.android.gms:play-services-ads:19.3.0'
+    implementation 'com.google.android.gms:play-services-ads:19.4.0'
 
 //    Sentry Traking
     implementation 'io.sentry:sentry-android:1.7.27'
