--- a/app/build.gradle
+++ b/app/build.gradle
@@ -150,7 +150,7 @@ dependencies {
     // Add the Firebase Crashlytics SDK.
     implementation 'com.google.firebase:firebase-crashlytics:17.2.2'
     // Recommended: Add the Google Analytics SDK.
-    implementation 'com.google.firebase:firebase-analytics:17.6.0'
+    implementation 'com.google.firebase:firebase-analytics:18.0.2'
 
 
     testImplementation 'junit:junit:4.12'
@@ -187,6 +187,8 @@ dependencies {
     implementation files("libs/cashfreesdk-1.4.9.8-release.aar")
     implementation 'com.android.volley:volley:1.1.1'
 
+    //Facebook sdk
+    implementation 'com.facebook.android:facebook-android-sdk:6.1.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
