--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,12 +28,6 @@
         android:name="android.hardware.audio.low_latency"
         android:required="false" />
 
-    <!--
-    android:appComponentFactory="android.support.v4.app.CoreComponentFactory"
-    android:appComponentFactory
-    android:icon="@mipmap/ic_launcher"
-    android:roundIcon="@mipmap/ic_launcher_round"
-    -->
     <application
         android:name=".App"
         android:allowBackup="false"
@@ -41,21 +35,21 @@
         android:icon="${appIcon}"
         android:label="@string/app_name"
         android:largeHeap="true"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="${appIconRounded}"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
-        android:requestLegacyExternalStorage="true"
         tools:ignore="GoogleAppIndexingWarning,HardcodedDebugMode"
         tools:node="merge"
         tools:replace="android:allowBackup,android:name,android:label"
         tools:targetApi="p">
-
         <activity
             android:name=".module.splash.SplashActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -64,11 +58,11 @@
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize|stateAlwaysHidden">
-
             <intent-filter>
                 <data
                     android:host="open"
                     android:scheme="tarrakki" />
+
                 <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.DEFAULT" />
@@ -85,12 +79,11 @@
                 <data
                     android:host="applinks.tarrakki.com"
                     android:scheme="https" />
-                <!-- example-alternate domain is required for App Links when the Journeys/Web SDK and Deepviews are used inside your website.  -->
+                <!-- example-alternate domain is required for App Links when the Journeys/Web SDK and Deepviews are used inside your website. -->
                 <data
                     android:host="tarrakki-alternate.app.link"
                     android:scheme="https" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".module.plan.PlanActivity"
@@ -180,9 +173,7 @@
                 <action android:name="com.tarrakki.ACTION_CLOSE_TICKET" />
                 <action android:name="com.tarrakki.ACTION_CANCEL_CLOSE_TICKET" />
             </intent-filter>
-        </receiver>
-
-        <!-- Facebook Details -->
+        </receiver> <!-- Facebook Details -->
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
@@ -191,7 +182,6 @@
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name" />
-
         <activity
             android:name="com.facebook.CustomTabActivity"
             android:exported="true">
@@ -207,10 +197,7 @@
 
         <meta-data
             android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
-
-
-        <!-- Branch init -->
+            android:value="@integer/google_play_services_version" /> <!-- Branch init -->
         <meta-data
             android:name="io.branch.sdk.BranchKey"
             android:value="key_live_jlRRwizxC34sb8icPRN9NefjwsinBAkS" />
@@ -219,20 +206,10 @@
             android:value="key_test_hlxrWC5Zx16DkYmWu4AHiimdqugRYMr" />
         <meta-data
             android:name="io.branch.sdk.TestMode"
-            android:value="false" />     <!-- Set to true to use Branch_Test_Key (useful when simulating installs and/or switching between debug and production flavors) -->
+            android:value="false" /> <!-- Set to true to use Branch_Test_Key (useful when simulating installs and/or switching between debug and production flavors) -->
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-3940256099942544~3347511713" />
-
-        <!-- Branch install referrer tracking (optional) -->
-        <!--<receiver
-            android:name="io.branch.referral.InstallListener"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="com.android.vending.INSTALL_REFERRER" />
-            </intent-filter>
-        </receiver>-->
-
     </application>
 
 </manifest>
