--- a/supportcompactlibrary/build.gradle
+++ b/supportcompactlibrary/build.gradle
@@ -45,9 +45,11 @@ dependencies {
 
     implementation "com.google.android.material:material:1.1.0"
     implementation 'org.greenrobot:eventbus:3.1.1'
-    implementation 'com.github.mjn1369:prettydialog:1.0.4'
+ //   implementation 'com.github.mjn1369:prettydialog:1.0.4'
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
     implementation 'com.intuit.ssp:ssp-android:1.0.6'
+
+  //  api 'com.github.mjn1369:prettydialog:1.0.4'
 
     //Retrofit
     api 'com.squareup.retrofit2:retrofit:2.5.0'
