--- a/supportcompactlibrary/build.gradle
+++ b/supportcompactlibrary/build.gradle
@@ -65,6 +65,8 @@ dependencies {
     api 'io.reactivex.rxjava2:rxjava:2.2.2'
 
     api 'com.google.android.gms:play-services-auth:18.0.0'
+
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
 
 kapt {
