--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,20 @@
         tools:node="merge"
         tools:replace="android:allowBackup,android:name,android:label"
         tools:targetApi="p">
+        <activity android:name=".module.verifymobileoremail.UserMobileEmailInputActivity"></activity>
+        <activity android:name=".module.verifymobileoremail.VerifyMobileOrEmailActivity" />
+        <activity android:name=".module.checkkycstatusbypan.CheckKYCStatusByPAN" />
+        <activity android:name=".module.verifysocialmobilenumber.EnterMobileNumberActivity" />
+        <activity
+            android:name=".module.verifysocialmobilenumber.VerifyMobileNumberActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppWindowBGThem"
+            android:windowSoftInputMode="adjustPan|adjustResize|stateVisible" />
+        <activity
+            android:name=".module.login.NewLoginActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppWindowBGThem"
+            android:windowSoftInputMode="adjustPan|adjustResize|stateVisible" />
         <activity
             android:name=".module.splash.SplashActivity"
             android:screenOrientation="portrait">
@@ -210,6 +224,9 @@
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-3940256099942544~3347511713" />
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
